fix:  broken css and broken script

--- a/packages/client/src/styles/profile.css
+++ b/packages/client/src/styles/profile.css
@@ -1,6 +1,6 @@
 .user-column {
     padding-left: 70px;
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
